# bike-uds-tool

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: conf.py  index.rst  integration.rst
docs/calls/: properties.rst  services.rst
docs/tools/: codegen.rst
python-lib/: setup.py
python-lib/line_uds/: constants.py  loader.py  profile.py  uds_tool.py
python-lib/line_uds/codegen/: __init__.py  __main__.py  generator.py  header.jinja2  source.jinja2
src/: uds_api.h  uds_call.c  uds_diag.h  uds_line.c  uds_line.h  uds_property.c
tests/: CMakeLists.txt  example_profile.json  test_UdsLine_GetProperties.cpp  test_UdsLine_SetProperties.cpp
